--- a/app/src/main/res/layout/activity_restore_password.xml
+++ b/app/src/main/res/layout/activity_restore_password.xml
@@ -8,32 +8,35 @@
     tools:context=".activities.RestorePassword">
 
     <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:orientation="vertical"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content">
+        android:orientation="vertical">
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
-                android:padding="5dp"
-                android:textColor="@android:color/white"
                 android:id="@+id/resetUsingEmail"
-                android:hint="Enter your registered email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:hint="Enter your registered email"
+                android:padding="5dp"
+                android:textColor="@android:color/white" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:layout_marginTop="20dp"
             android:id="@+id/resetPassbtn"
-            android:textAllCaps="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:background="@drawable/signin_btn"
             android:text="@string/reset"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textAllCaps="false" />
+
     </LinearLayout>
 
 </RelativeLayout>
