--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -13,7 +13,6 @@
     <FrameLayout
         android:id="@+id/fragmentcontainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </FrameLayout>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
