--- a/app/src/main/res/layout/home_view_fragment.xml
+++ b/app/src/main/res/layout/home_view_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,11 +7,9 @@
     android:background="@drawable/red_button_bg"
     tools:context=".fragments.HomeView">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyleposts"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-    </android.support.v7.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyleposts"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
