--- a/app/src/main/res/layout/near_by_hospitals.xml
+++ b/app/src/main/res/layout/near_by_hospitals.xml
@@ -6,9 +6,10 @@
     android:orientation="vertical"
     tools:context=".fragments.NearByHospitalActivity"
     android:layout_height="match_parent">
+
     <fragment
         android:id="@+id/gMap"
-        class="com.google.android.gms.maps.SupportMapFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
