--- a/app/src/main/res/layout/user_achievment_fragment.xml
+++ b/app/src/main/res/layout/user_achievment_fragment.xml
@@ -4,125 +4,128 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbarStyle="outsideOverlay"
     android:background="@drawable/red_button_bg"
-    tools:context=".fragments.AchievmentsView">
+    android:scrollbarStyle="outsideOverlay"
+    tools:context=".fragments.AchievementsView">
 
     <TextView
-        android:gravity="center"
         android:id="@+id/ShowInof"
-        android:visibility="gone"
-        android:text="You are not a donor. Be a donor first to achieve!"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="You are not a donor. Be a donor first to achieve!"
+        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/donorAchiev"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/donateInfo"
-            android:padding="10dp"
-            android:gravity="center"
-            android:text="Have you donated today?"
-            android:backgroundTint="@color/primary_dark"
-            android:background="@drawable/signin_btn"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/signin_btn"
+            android:backgroundTint="@color/primary_dark"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Have you donated today?"
+            android:textColor="@android:color/white" />
 
         <LinearLayout
-            android:visibility="visible"
             android:id="@+id/yesnolayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:visibility="visible">
 
             <Button
                 android:id="@+id/btnYes"
-                android:text="Yes"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="Yes" />
+
             <Button
-                android:text="No"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="No" />
 
         </LinearLayout>
+
         <TextView
-            android:visibility="gone"
-            android:layout_gravity="center_horizontal"
             android:id="@+id/nextDonate"
-            android:gravity="center"
-            android:backgroundTint="@color/primary_dark"
-            android:background="@drawable/circle"
-            android:text="34 days"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/primary_dark"
+            android:gravity="center"
+            android:text="34 days"
+            android:visibility="gone" />
 
         <LinearLayout
-            android:padding="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:padding="20dp">
 
             <LinearLayout
-                android:gravity="center"
-                android:orientation="vertical"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_marginBottom="5dp"
-                    android:gravity="center"
-                    android:backgroundTint="@color/primary_dark"
-                    android:background="@drawable/signin_btn"
-                    android:textColor="@android:color/white"
-                    android:text="Total Donated:"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/signin_btn"
+                    android:backgroundTint="@color/primary_dark"
+                    android:gravity="center"
+                    android:text="Total Donated:"
+                    android:textColor="@android:color/white" />
+
                 <TextView
                     android:id="@+id/settotalDonate"
-                    android:gravity="center"
-                    android:backgroundTint="@color/primary_dark"
-                    android:background="@drawable/circle"
-                    android:text="1 times"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/circle"
+                    android:backgroundTint="@color/primary_dark"
+                    android:gravity="center"
+                    android:text="1 times" />
             </LinearLayout>
 
             <LinearLayout
-                android:gravity="center"
-                android:orientation="vertical"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_marginBottom="5dp"
-                    android:gravity="center"
-                    android:backgroundTint="@color/primary_dark"
-                    android:background="@drawable/signin_btn"
-                    android:textColor="@android:color/white"
-                    android:text="Last donated:"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/signin_btn"
+                    android:backgroundTint="@color/primary_dark"
+                    android:gravity="center"
+                    android:text="Last donated:"
+                    android:textColor="@android:color/white" />
+
                 <TextView
                     android:id="@+id/setLastDonate"
-                    android:gravity="center"
-                    android:backgroundTint="@color/primary_dark"
-                    android:background="@drawable/circle"
-                    android:text="12/12/2018"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/circle"
+                    android:backgroundTint="@color/primary_dark"
+                    android:gravity="center"
+                    android:text="12/12/2018" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
